@@ -26,7 +26,7 @@ config BR2_LARGEFILE
 config BR2_SOFT_FLOAT
 	bool "Use software floating point by default"
 	default n
-	depends on BR2_arm || BR2_armeb || BR2_mips || BR2_mipsel || BR2_powerpc
+	depends on BR2_arm || BR2_armeb || BR2_bfin || BR2_mips || BR2_mipsel || BR2_powerpc
 	help
 	  If your target CPU does not have a Floating Point Unit (FPU) or a
 	  kernel FPU emulator, but you still wish to support floating point
